test_integration/wacc_examples/invalid/semanticErr/function/functionAssign.wacc
# tries to assign to a function

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int f() is
    return 3
  end
  int f() is
    return 4
  end

  bool f = true ;

end
